--- a/config/app_config_prd.ini
+++ b/config/app_config_prd.ini
@@ -1,6 +1,6 @@
 [VIES_ENDPOINTS]
 VIES_CHECK_VAT_SERVICE_ENDPOINT = http://ec.europa.eu/taxation_customs/vies/checkVatService.wsdl
-VIES_STATUS_SERVICE_ENDPOINT = https://ec.europa.eu/taxation_customs/vies/checkStatusService.wsdl
+VIES_STATUS_SERVICE_ENDPOINT = https://ec.europa.eu/taxation_customs/vies/checkStatusService.wsdl2
 
 [APPLICATION]
 data_source_dir = D:\DEV\Python\Projects\vat_controller\data\
@@ -16,7 +16,7 @@ env_filepath = D:\DEV\Python\Projects\vat_controller\env\.env.prd
 
 [LOGGING]
 # The log level for the application (e.g., INFO, DEBUG, ERROR)
-log_level = DEBUG
+log_level = INFO
 log_filepath = D:\DEV\Python\Projects\vat_controller\src\vat_controller.log
 
 
