--- a/config/app_config_prd.ini
+++ b/config/app_config_prd.ini
@@ -1,6 +1,6 @@
 [VIES_ENDPOINTS]
 VIES_CHECK_VAT_SERVICE_ENDPOINT = http://ec.europa.eu/taxation_customs/vies/checkVatService.wsdl
-VIES_STATUS_SERVICE_ENDPOINT = https://ec.europa.eu/taxation_customs/vies/checkStatusService.wsdl2
+VIES_STATUS_SERVICE_ENDPOINT = https://ec.europa.eu/taxation_customs/vies/checkStatusService.wsdl
 
 [APPLICATION]
 data_source_dir = D:\DEV\Python\Projects\vat_controller\data\
